<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udayton.binduk.electriccarfinancing.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txtTitleTopMargin"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtTitleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/yearsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/years"
        android:prompt="@string/prompt1"
        android:spinnerMode="dialog"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/txtLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="numberDecimal"
        android:paddingTop="@dimen/txtLoanTopMargin"
        android:textSize="@dimen/txtLoanSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="80dp" />

    <EditText
        android:id="@+id/txtInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/txtInterestTopMargin"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="numberDecimal"
        android:textSize="@dimen/txtInterestSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="127dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btnPaymentTopMargin"
        android:gravity="center_horizontal"
        android:text="@string/btnPayment"
        android:textAlignment="center"
        android:textSize="@dimen/btnPaymentSize"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="178dp" />

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/imgOpeningTopMargin"
        android:contentDescription="@string/imgOpeningDescription"
        app:srcCompat="@drawable/opening"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="271dp" />

</LinearLayout>
